[tool.poetry]
name = "nude-check-tests"
version = "0.1.0"
description = ""
authors = ["taruu <taruumax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
huggingface-hub = "^0.24.0"
pandas = "^2.2.2"
pillow = "^10.4.0"
simple-parsing = "^0.1.5"
jax = "^0.4.30"
flax = "^0.8.5"
onnxruntime = "^1.18.1"
opencv-python = "^4.10.0.84"
einops = "^0.8.0"
tensorflow = "^2.17.0"
tensorflow-hub = "0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
